@@ -1,3 +1,14 @@
+jpress v3.2.2:
+优化：JPress 的安装和升级流程
+优化：重构第三方登录的授权流程
+优化：优化产品的相关指令和注释
+修复：使用 QQ 第三方登录的时候无法正常登录的问题
+修复：正确设置微信小程序、第三方登录等的首次用户状态
+修复：当产品详情页引用 product.js 但是未启用 Swiper 的时候出错的问题
+修复：checkout 页面无法正确删除产品的问题
+
+
+
 jpress v3.2.1:
 新增：模板预览功能，前端可以通过 url 访问指定已经安装的模板
 优化：升级 ckeditor 到最新版本，以支持 word 的复制粘贴功能
